--- a/_data/code/provincial/ab.yml
+++ b/_data/code/provincial/ab.yml
@@ -11,8 +11,13 @@ releases:
       created: '2016-07-05'
       metadataLastUpdated: '2018-04-25'
     description:
-      en: Dataset scheming extension used on open.alberta.ca
-      fr: Extension du schéma de données utilisée dans open.alberta.ca
+      whatItDoes:
+        en: Dataset scheming extension used on open.alberta.ca
+        fr: Extension du schéma de données utilisée dans open.alberta.ca
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232300'
     languages:
       - Python
     name:
@@ -41,8 +46,13 @@ releases:
       created: '2016-07-05'
       metadataLastUpdated: '2017-05-03'
     description:
-      en: Ckan extension developed for use on open.alberta.ca
-      fr: Extension Ckan développée pour être utilisée dans open.alberta.ca
+      whatItDoes:
+        en: Ckan extension developed for use on open.alberta.ca
+        fr: Extension Ckan développée pour être utilisée dans open.alberta.ca
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232300'
     languages:
       - Python
     name:
@@ -71,8 +81,13 @@ releases:
       created: '2016-08-03'
       metadataLastUpdated: '2016-08-03'
     description:
-      en: Ckan Geo Map Viewer Extension
-      fr: Extension Ckan de la carte géographique
+      whatItDoes:
+        en: Ckan Geo Map Viewer Extension
+        fr: Extension Ckan de la carte géographique
+      howItWorks:
+        en: null
+        fr: null
+    category: '43233500'
     languages:
       - Python
     name:
