--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -11,8 +11,13 @@ releases:
       created: '2015-09-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
-      fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
+      whatItDoes:
+        en: The one-stop-shop solution for operating robots, satellites and beyond
+        fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232600'
     languages:
       - Java
     name:
