--- a/_data/code/federal/cse-cst.yml
+++ b/_data/code/federal/cse-cst.yml
@@ -11,8 +11,13 @@ releases:
       created: '2016-02-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: Learning environment that aims in helping students learn the basis of assembly programming and operating system development
-      fr: Environnement visant à aider les étudiants à apprendre les bases de la programmation assembleur et du développement de systèmes d'exploitation. C'est un environnement portable et facile à apprendre
+      whatItDoes:
+        en: Learning environment that aims in helping students learn the basis of assembly programming and operating system development
+        fr: Environnement visant à aider les étudiants à apprendre les bases de la programmation assembleur et du développement de systèmes d'exploitation. C'est un environnement portable et facile à apprendre
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232500'
     languages:
       - Python
     name:
@@ -41,8 +46,13 @@ releases:
       created: '2016-12-21'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: Platform for the analysis of malicious files. It is designed to assist cyber defence teams to automate the analysis of files and to better use the time of security analysts
-      fr: Plateforme servant à l'analyse de fichiers malveillants, qui a été conçue pour aider les équipes de cyberdéfense à automatiser l'analyse des fichiers et à faire une meilleure utilisation du temps des analystes de la sécurité
+      whatItDoes:
+        en: Platform for the analysis of malicious files. It is designed to assist cyber defence teams to automate the analysis of files and to better use the time of security analysts
+        fr: Plateforme servant à l'analyse de fichiers malveillants, qui a été conçue pour aider les équipes de cyberdéfense à automatiser l'analyse des fichiers et à faire une meilleure utilisation du temps des analystes de la sécurité
+      howItWorks:
+        en: null
+        fr: null
+    category: '43233200'
     languages:
       - Python
     name:
