--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -8,8 +8,13 @@ releases:
       created: '2006-08-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
-      fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
+      whatItDoes:
+        en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
+        fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232600'
     languages:
       - Python
     name:
