--- a/_data/code/federal/esdc-edsc.yml
+++ b/_data/code/federal/esdc-edsc.yml
@@ -8,8 +8,13 @@ releases:
       created: '2019-02-13'
       metadataLastUpdated: '2019-02-21'
     description:
-      en: A dashboard to show expose metrics on software projects at ESDC
-      fr: Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC
+      whatItDoes:
+        en: A dashboard to show expose metrics on software projects at ESDC
+        fr: Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232400'
     name:
       en: AppHub
       fr: HubApp
@@ -32,8 +37,13 @@ releases:
       created: '2019-02-13'
       metadataLastUpdated: '2019-02-21'
     description:
-      en: A .Net test app for the Code Coverage reporting dashboard
-      fr: Une application de test .Net pour le tableau de bord de rapports de couverture de code
+      whatItDoes:
+        en: A .Net test app for the Code Coverage reporting dashboard
+        fr: Une application de test .Net pour le tableau de bord de rapports de couverture de code
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232400'
     name:
       en: .Net Code Coverage Demo
       fr: Démo de couverture de code .Net
