--- a/_data/code/federal/statcan.yml
+++ b/_data/code/federal/statcan.yml
@@ -9,8 +9,13 @@ releases:
       created: '2018-01-07'
       metadataLastUpdated: '2019-04-18'
     description:
-      en: Centralize, process, and clean data
-      fr: Centraliser, traiter et nettoyer les données
+      whatItDoes:
+        en: Centralize, process, and clean data
+        fr: Centraliser, traiter et nettoyer les données
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232300'
     name:
       en: OpenTabulate
       fr: OpenTabulate
