--- a/_data/code/municipal/edmonton_ab.yml
+++ b/_data/code/municipal/edmonton_ab.yml
@@ -14,8 +14,13 @@ releases:
       metadataLastUpdated: '2019-05-28'
       lastModified: '2019-05-28'
     description:
-      en: YouCanBenefit is a web application that increases social benefit program discoverability for people of lesser means and their allies.
-      fr: YouCanBenefit est une application Web qui augmente la découvrabilité des programmes d''avantages sociaux pour les personnes moins fortunées et leurs alliés.
+      whatItDoes:
+        en: YouCanBenefit is a web application that increases social benefit program discoverability for people of lesser means and their allies.
+        fr: YouCanBenefit est une application Web qui augmente la découvrabilité des programmes d''avantages sociaux pour les personnes moins fortunées et leurs alliés.
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232100'
     name:
       en: YouCanBenefit
       fr: YouCanBenefit
