--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -11,8 +11,13 @@ releases:
       created: '2014-02-14'
       metadataLastUpdated: '2019-01-29'
     description:
-      en: City of Montreal CKAN Extension
-      fr: Extension CKAN de la ville de Montréal
+      whatItDoes:
+        en: City of Montreal CKAN Extension
+        fr: Extension CKAN de la ville de Montréal
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232300'
     languages:
       - Python
     name:
