--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -10,6 +10,7 @@ formGroups:
     start: true
     title: releases
   - preset: description
+  - preset: categorySelect
   - preset: contact
   - preset: dates
     created: true
