--- a/_data/db/software/uses/drupal/tbs-sct.yml
+++ b/_data/db/software/uses/drupal/tbs-sct.yml
@@ -1,27 +1,4 @@
 ---
 administration: tbs-sct
 uses:
-  - contact:
-      URL:
-        en: 'https://github.com/canada-ca/ore-ero/issues'
-        fr: 'https://github.com/canada-ca/ore-ero/issues'
-      email: christopher.jaja@tbs-sct.gc.ca
-      name: Christopher Jaja
-    date:
-      started: '2018-01-23'
-      metadataLastUpdated: '2019-05-06'
-    name:
-      en: Open Government Portal
-      fr: Portail du Gouvernement ouvert
-    description:
-      en: Drupal 8 install profile for open.canada.ca
-      fr: Profil d'installation de Drupal 8 pour open.canada.ca
-    relatedCode:
-      URL:
-        en: 'https://github.com/open-data/od'
-        fr: 'https://github.com/open-data/od'
-      name:
-        en: open data
-        fr: données ouvertes
-    users:
-      - public
+  - Open Government Portal
