--- a/_data/db/software/uses/airbnb-knowledge-repo/mtl_qc.yml
+++ b/_data/db/software/uses/airbnb-knowledge-repo/mtl_qc.yml
@@ -1,14 +1,4 @@
 ---
 administration: mtl_qc
 uses:
-  - contact:
-      email: libre@ville.montreal.qc.ca
-    date:
-      started: '2019-01-31'
-      metadataLastUpdated: '2019-05-06'
-    description:
-      en: Business Intelligence.
-      fr: Intelligence d'affaires.
-    name:
-      en: Document Management Software.
-      fr: Logiciels de gestion documentaire.
+  - Document Management Software.
