--- a/_data/db/software/uses/angular/mtl_qc.yml
+++ b/_data/db/software/uses/angular/mtl_qc.yml
@@ -1,14 +1,4 @@
 ---
 administration: mtl_qc
 uses:
-  - contact:
-      email: libre@ville.montreal.qc.ca
-    date:
-      started: '2017-06-30'
-      metadataLastUpdated: '2019-05-06'
-    description:
-      en: Developpement.
-      fr: Développement.
-    name:
-      en: Development environment software.
-      fr: Logiciels environnement de développement.
+  - Development environment software.
