--- a/_data/db/software/uses/bokeh/mtl_qc.yml
+++ b/_data/db/software/uses/bokeh/mtl_qc.yml
@@ -1,14 +1,4 @@
 ---
 administration: mtl_qc
 uses:
-  - contact:
-      email: libre@ville.montreal.qc.ca
-    date:
-      started: '2017-06-30'
-      metadataLastUpdated: '2019-05-06'
-    description:
-      en: Business Intelligence.
-      fr: Intelligence d'affaires.
-    name:
-      en: Imaging software or graphics software.
-      fr: Logiciels d'imagerie ou logiciels graphiques.
+  - Imaging software or graphics software.
