--- a/_data/db/software/uses/elasticsearch/mtl_qc.yml
+++ b/_data/db/software/uses/elasticsearch/mtl_qc.yml
@@ -1,14 +1,4 @@
 ---
 administration: mtl_qc
 uses:
-  - contact:
-      email: libre@ville.montreal.qc.ca
-    date:
-      started: '2017-06-30'
-      metadataLastUpdated: '2019-05-10'
-    description:
-      en: Information managment.
-      fr: Gestion de l'information.
-    name:
-      en: Data mining software (data mining).
-      fr: Logiciels d'extraction de données (data mining).
+  - Data mining software (data mining).
