--- a/_data/db/software/uses/elasticsearch/tc.yml
+++ b/_data/db/software/uses/elasticsearch/tc.yml
@@ -1,15 +1,4 @@
 ---
 administration: tc
 uses:
-  - contact:
-      name: Irina Krasteleva
-      email: irina.krasteleva@tc.gc.ca
-    date:
-      started: '2019-05-06'
-      metadataLastUpdated: '2019-05-13'
-    name:
-      en: Development Environment
-      fr: Environnement de développement
-    description:
-      en: APM data
-      fr: Données du APM
+  - Development Environment
