--- a/_data/db/software/uses/linux/tbs-sct.yml
+++ b/_data/db/software/uses/linux/tbs-sct.yml
@@ -1,14 +1,4 @@
 ---
 administration: tbs-sct
 uses:
-  - contact:
-      email: ilia.salem@tbs-sct.gc.ca
-    date:
-      started: '2019-05-06'
-      metadataLastUpdated: '2019-05-15'
-    name:
-      en: Development Environment
-      fr: Environnement de développement
-    description:
-      en: APM data
-      fr: Données du APM
+  - Development Environment
