--- a/_data/db/software/uses/notepad-plus-plus/gac-amc.yml
+++ b/_data/db/software/uses/notepad-plus-plus/gac-amc.yml
@@ -1,17 +1,4 @@
 ---
 administration: gac-amc
 uses:
-  - contact:
-      URL:
-        en: 'https://www.international.gc.ca/'
-        fr: 'https://www.international.gc.ca/'
-      email: sebastien.routier@international.gc.ca
-    date:
-      started: '2019-05-06'
-      metadataLastUpdated: '2019-05-16'
-    name:
-      en: Available to all employees
-      fr: Disponible pour tous les employés
-    description:
-      en: Must be requeted from the AppStore.
-      fr: Disponible au AppStore.
+  - Available to all employees
