--- a/_data/db/software/uses/qgis/statcan.yml
+++ b/_data/db/software/uses/qgis/statcan.yml
@@ -1,14 +1,4 @@
 ---
 administration: statcan
 uses:
-  - contact:
-      email: reginald.maltais2@canada.ca
-    date:
-      started: '2019-05-06'
-      metadataLastUpdated: '2019-05-16'
-    name:
-      en: Geographic Information Systems (GIS)
-      fr: Systèmes d'information géographique (SIG)
-    description:
-      en: Desktop geospatial information processing
-      fr: Système d'information géospatiale de bureau
+  - Geographic Information Systems (GIS)
