Fixing yml validation

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ script:
 - yamale -s schemas/administrations.yml _data/db/administrations
 - yamale -s schemas/code_administration.yml _data/db/code/administrations
 - yamale -s schemas/code_code.yml _data/db/code/releases
-- yamale -s schemas/software_uses.yml _data/db/software/uses
+- yamale -s schemas/software_uses.yml _data/db/software/uses/*.yml
+- yamale -s schemas/software_use.yml _data/db/software/uses/**/*.yml
 - yamale -s schemas/software_software.yml _data/db/software/softwares
 - yamale -s schemas/standard_administration.yml _data/db/standard/administrations
 - yamale -s schemas/standard_standards.yml _data/db/standard/standards
