--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 - html5validator --root _site/
 - yamale -s schemaCode.yaml _data/code
 - yamale -s schemaAdmin.yaml _data/administrations
-- yamale -s schemaOss.yaml _data/logiciels_libres-open_source_software
+- yamale -s schemaSoftware.yaml _data/software
 - npm run lint
 - yamllint -d configYamlLint.yml _data
 
