--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -21,8 +21,10 @@ releases:
       fr: Division de la mobilisation numérique
     licenses:
       - URL:
-          en: 'https://github.com/gctools-outilsgc/gcconnex/blob/gcconnex/LICENSE.txt'
-          fr: 'https://github.com/gctools-outilsgc/gcconnex/blob/gcconnex/LICENSE.txt'
+          en: >-
+            https://github.com/gctools-outilsgc/gcconnex/blob/gcconnex/LICENSE.txt
+          fr: >-
+            https://github.com/gctools-outilsgc/gcconnex/blob/gcconnex/LICENSE.txt
         spdxID: GPL-2.0
     relatedCode:
       - URL: 'https://github.com/Elgg/Elgg'
@@ -44,8 +46,12 @@ releases:
       created: '2017-04-09'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: Both digital.canada.ca and numerique.canada.ca are published from this repository.
-      fr: digital.canada.ca et numerique.canada.ca sont publiés à partir de ce repository.
+      en: >-
+        Both digital.canada.ca and numerique.canada.ca are published from this
+        repository.
+      fr: >-
+        digital.canada.ca et numerique.canada.ca sont publiés à partir de ce
+        repository.
     name:
       en: CDS Website
       fr: Site Web SNC
@@ -71,8 +77,12 @@ releases:
       created: '2013-08-11'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: Building websites that are accessible, usable, interoperable, mobile friendly and multilingual
-      fr: Construire des sites Web accessibles, faciles d'emploi, interopérables, optimisés pour les appareils mobiles et multilingues
+      en: >-
+        Building websites that are accessible, usable, interoperable, mobile
+        friendly and multilingual
+      fr: >-
+        Construire des sites Web accessibles, faciles d'emploi, interopérables,
+        optimisés pour les appareils mobiles et multilingues
     name:
       en: Web Experience Toolkit (WET)
       fr: Boîte à outils de l'expérience Web (BOEW)
@@ -148,8 +158,10 @@ releases:
       fr: Gouvernement Ouvert
     licenses:
       - URL:
-          en: 'https://github.com/open-data/ckanext-cloudstorage/blob/master/COPYING'
-          fr: 'https://github.com/open-data/ckanext-cloudstorage/blob/master/COPYING.fr'
+          en: >-
+            https://github.com/open-data/ckanext-cloudstorage/blob/master/COPYING
+          fr: >-
+            https://github.com/open-data/ckanext-cloudstorage/blob/master/COPYING.fr
         spdxID: MIT
     relatedCode:
       - URL:
@@ -174,7 +186,7 @@ releases:
       created: '2013-09-08'
       metadataLastUpdated: '2018-03-26'
     description:
-      en: Easy, shareable custom CKAN schemas
+      en: 'Easy, shareable custom CKAN schemas'
     languages:
       - Python
     name:
@@ -211,7 +223,9 @@ releases:
       created: '2013-04-07'
       metadataLastUpdated: '2018-03-26'
     description:
-      en: Command line interface and Python module for accessing the CKAN Action API
+      en: >-
+        Command line interface and Python module for accessing the CKAN Action
+        API
     languages:
       - Python
     name:
@@ -279,10 +293,10 @@ releases:
       fr:
         - Extension CKAN
   - contact:
-      email: sebastien.lemay@canada.ca
+      email: sebastien.lemay@hrsdc-rhdcc.gc.ca.ca
     date:
       created: '2017-12-31'
-      metadataLastUpdated: '2019-03-06'
+      metadataLastUpdated: '2019-08-01'
     description:
       en: This Website and all the data.
       fr: Ce site Web et toutes les données.
@@ -294,11 +308,6 @@ releases:
           en: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
           fr: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
         spdxID: MIT
-    partners:
-      - email: renatabianca.tomazeli@ville.montreal.qc.ca
-        name:
-          en: City of Montreal
-          fr: Ville de Montréal
     repositoryURL:
       en: 'https://github.com/canada-ca/ore-ero'
       fr: 'https://github.com/canada-ca/ore-ero'
