--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -41,8 +41,12 @@ releases:
       created: '2015-04-29'
       metadataLastUpdated: '2019-05-10'
     description:
-      en: Groundwater Wells and Aquifers application for the Ministry of Environment.
-      fr: Application de puits d'eau souterraine et d'aquifères pour le ministère de l'environnement.
+      en: >-
+        Groundwater Wells and Aquifers application for the Ministry of
+        Environment.
+      fr: >-
+        Application de puits d'eau souterraine et d'aquifères pour le ministère
+        de l'environnement.
     homepageURL:
       en: 'https://apps.nrs.gov.bc.ca/gwells/'
       fr: 'https://apps.nrs.gov.bc.ca/gwells/'
