--- a/_data/code/federal/tc.yml
+++ b/_data/code/federal/tc.yml
@@ -41,8 +41,15 @@ releases:
       created: '2018-10-14'
       metadataLastUpdated: '2018-10-29'
     description:
-      en: The Reference Centre is .net WPF application that was designed for Transport Canada Inspectors to quickly retrieve documents stored on a network drive that was setup with Windows Sync (Always Available Offline).
-      fr: Le Centre de référence est une application WPF .net conçue pour permettre aux inspecteurs de Transports Canada de récupérer rapidement les documents stockés sur un lecteur réseau configuré avec Windows Sync.
+      en: >-
+        The Reference Centre is .net WPF application that was designed for
+        Transport Canada Inspectors to quickly retrieve documents stored on a
+        network drive that was setup with Windows Sync (Always Available
+        Offline).
+      fr: >-
+        Le Centre de référence est une application WPF .net conçue pour
+        permettre aux inspecteurs de Transports Canada de récupérer rapidement
+        les documents stockés sur un lecteur réseau configuré avec Windows Sync.
     languages:
       - C#
     name:
