--- a/_data/software/airFlow.yml
+++ b/_data/software/airFlow.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Airflow is a platform to programmatically author, schedule and monitor workflows.
-  fr: Airflow est une plate-forme permettant de créer, planifier et surveiller par programme des flux de travail.
+  en: >-
+    Airflow is a platform to programmatically author, schedule and monitor
+    workflows.
+  fr: >-
+    Airflow est une plate-forme permettant de créer, planifier et surveiller par
+    programme des flux de travail.
 homepageURL:
   en: 'https://airflow.apache.org/'
   fr: 'https://airflow.apache.org/'
