--- a/_data/software/php.yml
+++ b/_data/software/php.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: A server-side scripting language designed for web development but also used as a general-purpose programming language.
-  fr: Langage de script côté serveur conçu pour le développement Web mais également utilisé comme langage de programmation généraliste.
+  en: >-
+    A server-side scripting language designed for web development but also used
+    as a general-purpose programming language.
+  fr: >-
+    Langage de script côté serveur conçu pour le développement Web mais
+    également utilisé comme langage de programmation généraliste.
 homepageURL:
   en: 'https://php.net'
   fr: 'https://php.net'
