--- a/_data/standard/html5.yml
+++ b/_data/standard/html5.yml
@@ -16,8 +16,13 @@ administrations:
           fr: Norme sur l'interopérabilité du Web
     status: mandatory-gc
 description:
-  en: HTML5 is a markup language used for structuring and presenting content on the Web. It is the fifth and current major version of the HTML standard.
-  fr: HTML5 est un langage de balisage utilisé pour structurer et présenter du contenu sur le Web. C'est la cinquième et dernière version majeure de la norme HTML.
+  en: >-
+    HTML5 is a markup language used for structuring and presenting content on
+    the Web. It is the fifth and current major version of the HTML standard.
+  fr: >-
+    HTML5 est un langage de balisage utilisé pour structurer et présenter du
+    contenu sur le Web. C'est la cinquième et dernière version majeure de la
+    norme HTML.
 name:
   en: HyperText Markup Language 5
   fr: HyperText Markup Language 5
