--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -20,18 +20,30 @@ administrations:
       email: null
     references:
       - URL:
-          en: 'http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx'
-          fr: 'http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx'
+          en: >-
+            http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+          fr: >-
+            http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx
         name:
-          en: Guidelines on File Formats for Transferring Information Resources of Enduring Value
-          fr: Lignes directrices sur les formats de fichier à utiliser pour transférer des ressources documentaires
+          en: >-
+            Guidelines on File Formats for Transferring Information Resources of
+            Enduring Value
+          fr: >-
+            Lignes directrices sur les formats de fichier à utiliser pour
+            transférer des ressources documentaires
     date:
       created: '2018-01-23'
       metadataLastUpdated: '2018-11-15'
     status: preferred-gc
 description:
-  en: UTF-8 is a variable width character encoding capable of encoding all valid code points in Unicode using one to four 8-bit bytes. The encoding is defined by the Unicode standard.
-  fr: UTF-8 est un codage de caractères de largeur variable capable de coder tous les points de code valides en Unicode en utilisant un à quatre octets de 8 bits. Le codage est défini par la norme Unicode.
+  en: >-
+    UTF-8 is a variable width character encoding capable of encoding all valid
+    code points in Unicode using one to four 8-bit bytes. The encoding is
+    defined by the Unicode standard.
+  fr: >-
+    UTF-8 est un codage de caractères de largeur variable capable de coder tous
+    les points de code valides en Unicode en utilisant un à quatre octets de 8
+    bits. Le codage est défini par la norme Unicode.
 name:
   en: Unicode Transformation Format 8
   fr: Unicode Transformation Format 8
